Fix contrasting issues highlighted in lighthouse report

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -48,8 +48,7 @@
 }
 
 .UnFollow {
-    background-color: rgb(99, 183, 183);
-    color: #ffff;
+    background-color: rgb(139, 227, 218);
     transform: 1.2;
     font-size: 0.8rem;
     align-self: center;
@@ -59,17 +58,18 @@
     margin-left: 2px;
     margin-right: 2px;
     min-width: 75px;
+    color: rgb(3, 80, 80);
 }
 
 .UnFollow:hover {
-    opacity: 0.7;
     border-color: transparent;
     cursor: pointer;
     transform: scale(1.05);
     transition: all 0.8s;
-    background-color: teal;
+    background-color: rgb(46, 205, 189);
+    
 }
 .UnFollow:focus {
-    background-color: teal;
+    background-color: rgb(46, 205, 189);
     border-color: transparent !important;
 }
